fix(Tab group): hide horizontal scroll bar

--- a/packages/bee-q/src/components/tab-group/scss/bq-tab-group.scss
+++ b/packages/bee-q/src/components/tab-group/scss/bq-tab-group.scss
@@ -6,6 +6,15 @@
   @apply block;
 }
 
-.bq-tab-group__divider {
+.bq-tab--group {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    @apply hidden;
+  }
+}
+
+.bq-tab--group__divider {
   @apply mt-[-2px] w-full border-x-0 border-b border-t-0 border-solid border-b-stroke-secondary;
 }
